<resources>
    <string name="app_name">LoadedTummy</string>
    <string name="loaded_tummy">LoadedTummy</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an acount? Sign up now</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="frequently_asked_questions_faqs">Frequently Asked Questions(FAQs)</string>
    <string name="log_out">Log out</string>
    <string name="loadedtummy">LoadedTummy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="cost_per_person">Cost Per Person</string>
    <string name="_4_5">4.5</string>
</resources>