<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            />

        <item
            android:id="@+id/userProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/user_profile"
            />

        <item
            android:id="@+id/favoriteRestaurant"
            android:icon="@drawable/ic_favourite_restro"
            android:title="@string/favorite_restaurants"
            />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history"
            />

        <item
            android:id="@+id/FAQs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/frequently_asked_questions_faqs"
            />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out"
            />


    </group>

</menu>