<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        />


    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/imgLogo"
        android:background="#fff"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_mobile_no"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:textColor="#000"
        android:textSize="20sp"
        android:maxLength="10"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/etMobileNo"
        android:background="#fff"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000"
        android:textSize="20sp"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/etPassword"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        />


</RelativeLayout>